fix incorrect x scrollbar

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -32,6 +32,7 @@ button {
 #root {
   width: 100%;
   min-height: 100vh;
+  overflow-x: clip;
 }
 
 input:focus {
